--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:acceptance": "vitest run tests/acceptance",
+    "ocr:up": "docker compose -f docker-compose.ocr.yml up --build paddle-ocr",
+    "ocr:down": "docker compose -f docker-compose.ocr.yml down",
     "benchmark:p95": "tsx scripts/benchmark-p95.ts 200",
     "check": "npm run lint && npm run typecheck && npm run test"
   },
@@ -30,7 +32,6 @@
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tesseract.js": "^7.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
